# LuaROTT

./: .clang-format  .gitignore  CMakeLists.txt  README.md  default.nix  flake.nix
.github/workflows/: main.yml
cmake/: install.cmake  mingw-i686.cmake  mingw-x86_64.cmake
doc/: rott_dmo.hexpat  rottnet.md
misc/: dmoinfo.c  dmoinfo.mak  make_icons.sh  netrott.desktop.in  netrott.rc  rott.rc  rotten.desktop  rotten.rc  rotten_sw.desktop
misc/wad/: DOPE1  DOPE2  DOPE3  DOPE4  DOPE5  DOPE6  DOPE7  DOPE8  makewad.py  rotten.wad
rott/: _rt_acto.h  _rt_menu.h  _rt_soun.h  _rt_stat.h  _rt_ted.h  cin_efct.c  cin_efct.h  develop.h  dosutil.c  dukemusc.c  engine.c  fx_mixer.c  ipxnet.h  ipxsetup.c  isr.c  m_misc2.h  modexlib.c  myprint.h  rt_actor.c  rt_actor.h  rt_build.c  rt_com.c  rt_com.h  rt_crc.c  rt_datadir.c  rt_debug.c  rt_def.h  rt_door.c  rt_door.h  rt_draw.h  rt_game.h  rt_in.c  rt_main.c  rt_main.h  rt_menu.c  rt_msg.c  rt_msg.h  rt_net.c  rt_playr.c  rt_playr.h  (+16 more)
rottded/: rottded.c
scripts/: ControlPanel.lua  autoexec.cfg  menu_main.lua
scripts/menu/: main.lua
source/: WinRott.h  _engine.h  _rt_acto.h  _rt_draw.h  _rt_game.h  _rt_map.h  _rt_menu.h  _rt_net.h  _rt_play.h  _rt_rand.h  _rt_soun.h  _rt_stat.h  _rt_str.h  _rt_ted.h  _w_wad.h  byteordr.c  cin_actr.c  cin_efct.c  cin_evnt.c  cin_main.c  cmdlib.c  cmdlib.h  console.c  console.h  cvarlib.c  cvarlib.h  develop.h  dosutil.c  dukemusc.c  engine.c  f_scale.c  fx_man.h  fx_mixer.c  isr.c  isr.h  keyb.h  lumpy.h  m_misc2.c  m_misc2.h  modexlib.c  (+78 more)
